<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">RH%</string>
<string name="label_1">Outdoor temperature</string>
<string name="label_2">Outdoor RH</string>
<string name="label_3">Indoor temperature</string>
<string name="label_4">Estimated indoor RH</string>
<string name="label_FC">Fahrenheit / Celsius</string>
<string name="Placeholder1">000</string>
<string name="Placeholder2">000%</string>
<string name="Placeholder3">000</string>
<string name="Placeholder4">000%</string>
<string name="label_units_T">Units</string>
<string-array name="F_C">
  <item>F</item>
  <item>C</item>
</string-array>
<string-array name="units_T">
  <item>Fahrenheit</item>
  <item>Celsius</item>
</string-array>
<string name="msg_about">About</string>
<string name="msg_release">GPL release version 1.0</string>
<string name="msg_copyr">© 2011 Cecil Cheung</string>
<string name="msg_desc">Simple app to estimate indoor relative humidity, especially when it has been raining for a while. \nGPL release version 1.0\n© 2011 Cecil Cheung\nhttp://code.google.com/p/guesstimators/</string>
</resources>

