<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginRight="2dp"
    android:stretchColumns="1" >

<TableRow>
    <TextView
        style="@style/myLabels"
        android:layout_column="1"
        android:text="@string/label_1" />
</TableRow>

<TableRow>
    <SeekBar
        android:id="@+id/SeekBar01"
        android:layout_column="1"
        android:max="100"
        android:padding="3dp"
        android:progress="33" />
    <TextView
        android:id="@+id/TextView01"
        style="@style/myNumOutputs"
        android:text="@string/Placeholder1" />
</TableRow>

<TableRow>
    <TextView
        style="@style/myLabels"
        android:layout_column="1"
        android:text="@string/label_2" />
</TableRow>

<TableRow>
    <SeekBar
        android:id="@+id/SeekBar02"
        android:layout_column="1"
        android:max="100"
        android:padding="3dp"
        android:progress="100" />

    <TextView
        android:id="@+id/TextView02"
        style="@style/myNumOutputs"
        android:text="@string/Placeholder2" />
</TableRow>

<TableRow>
    <TextView
        style="@style/myLabels"
        android:layout_column="1"
        android:text="@string/label_3" />
</TableRow>

<TableRow>
    <SeekBar
        android:id="@+id/SeekBar03"
        android:layout_column="1"
        android:max="100"
        android:padding="3dp"
        android:progress="55" />

    <TextView
        android:id="@+id/TextView03"
        style="@style/myNumOutputs"
        android:text="@string/Placeholder3" />
</TableRow>

<TableRow>

    <TextView
        style="@style/myLabels"
        android:layout_column="1"
        android:text="@string/label_4" />
</TableRow>

<TableRow>

<ProgressBar
    android:id="@+id/SeekBar04"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_column="1"
    android:max="100"
    android:padding="3dp"
    android:progress="33" />

<TextView
    android:id="@+id/TextView04"
    style="@style/myNumOutputs"
    android:text="@string/Placeholder4"
    android:textColor="#EEEEEE" />

</TableRow>

</TableLayout>
